# stefmap_ros

./: CHANGELOG.rst  CMakeLists.txt  GetSTeFMap.srv  README.md  package.xml
cfg/: stefmapclient.cfg
config/: laserscan_filter_config.yaml  orkla_zone_limits.json
data/: corridor_2017_05_31.txt  corridor_2017_05_31_histograms.txt  orkla_2019_06_13.txt  orkla_2019_06_14.txt  orkla_2019_10_15_scene1.txt  orkla_2019_10_15_scene2.txt
include/stefmap_ros/: stefmap.hpp
launch/: atc_stefmap_offline.launch  maplaser_to_mapmod.launch  orkla_sim_stefmap_online.launch  orkla_stefmap.launch  orkla_stefmap_offline.launch  orkla_stefmap_online.launch  orkla_stefmap_shortdata.launch  orkla_visibility_map.launch  orulab_stefmap_online.launch  robot3_stefmap_online.launch  stefmap_built_offline.launch  stefmap_built_online.launch  test_stefmap_online.launch
msg/: STeFMapCellMsg.msg  STeFMapMsg.msg
scripts/: 1_orkla_create_histrograms.py  1_orkla_create_histrograms_short_data.py  2_orkla_load_histograms.py  2_orkla_load_histograms_short_data.py  3_atc_create_histograms.py  4_utbm_load_histograms.py  5_corridor_create_histograms.py  5_corridor_load_histograms.py  atc_create_histograms.py  atc_load_histograms.py  generate_trajectories_from_stefmap.py  orkla_create_histograms.py  orkla_load_histograms.py  stefmap_client_example.py
scripts/tools/: create_stefmap_input_histograms.py  load_histograms.py
src/: compute_visibility_map.py  laserscan_coverage_filter.py  spencermsgs_to_posearray.py  stefmap.cpp  stefmap_client_currenttime.py  stefmap_client_example.py  stefmap_client_orkla_data.py  stefmap_client_orkla_shortdata.py  stefmap_node_offline.py  stefmap_node_online.py  stefmap_server.py
src/scripts/: stefmap_client_example.py
srv/: GetSTeFMap.srv  GetVisibilityMap.srv  UpdateSTeFMap.srv
